--- a/static/style.css
+++ b/static/style.css
@@ -12,11 +12,11 @@ body {
 }
 
 *, html {
-    --primaryGradient: linear-gradient(93.12deg, #581B98 0.52%, #9C1DE7 100%);
-    --secondaryGradient: linear-gradient(268.91deg, #581B98 -2.14%, #9C1DE7 99.69%);
+    --primaryGradient: linear-gradient(93.12deg, #57c85d 0.52%, #409445 100%);
+    --secondaryGradient: linear-gradient(268.91deg, #57c85d -2.14%, #409445 99.69%);
     --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
     --secondaryBoxShadow: 0px -10px 15px rgba(0, 0, 0, 0.1);
-    --primary: #581B98;
+    --primary: #3390ec;
 }
 
 /* CHATBOX
@@ -100,7 +100,7 @@ body {
     background: #f9f9f9;
     height: 450px;
     width: 350px;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -112,9 +112,9 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 15px 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    padding: 10px 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     box-shadow: var(--primaryBoxShadow);
 }
 
@@ -165,7 +165,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 20px;
+    padding: 10px 10px;
     background: var(--secondaryGradient);
     box-shadow: var(--secondaryBoxShadow);
     border-bottom-right-radius: 10px;
@@ -174,10 +174,10 @@ body {
 }
 
 .chatbox__footer input {
-    width: 80%;
+    width: 85%;
     border: none;
-    padding: 10px 10px;
-    border-radius: 30px;
+    padding: 8px 8px;
+    border-radius: 8px;
     text-align: left;
 }
 
@@ -192,9 +192,7 @@ body {
     background: white;
     border: none;
     outline: none;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-bottom-left-radius: 50px;
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 50px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
     cursor: pointer;
 }
