--- a/templates/base.html
+++ b/templates/base.html
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
 <head>
     <meta charset="UTF-8">
     <title>Chatbot</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-<div class="container">
-    <div class="chatbox">
-        <div class="chatbox__support">
-            <div class="chatbox__header">
-                <div class="chatbox__image--header">
-                    <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
+    <div class="container">
+        <div class="chatbox">
+            <div class="chatbox__support">
+                <div class="chatbox__header">
+                    <div class="chatbox__image--header">
+<!--                        <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5&#45;&#45;v1.png" alt="image">-->
+                    </div>
+                    <div class="chatbox__content--header">
+                        <h4 class="chatbox__heading--header">Ответы на вопросы</h4>
+<!--                        <p class="chatbox__description&#45;&#45;header">Привет, меня зовут Кабанчик, я отвечу на твои вопросы</p>-->
+                    </div>
                 </div>
-                <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. My name is Sam. How can I help you?</p>
+                <div class="chatbox__messages">
+                    <div></div>
+                </div>
+                <div class="chatbox__footer">
+                    <input type="text" placeholder="Введите вопрос...">
+                    <button class="chatbox__send--footer send__button"><img width="28" height="28" src="https://img.icons8.com/external-kmg-design-glyph-kmg-design/32/666666/external-send-user-interface-kmg-design-glyph-kmg-design.png" alt="Send"/></button>
                 </div>
             </div>
-            <div class="chatbox__messages">
-                <div></div>
+            <div class="chatbox__button">
+                <button><img width="32" height="32" src="https://img.icons8.com/ios-filled/50/666666/ask-question.png" alt="image"/></button>
             </div>
-            <div class="chatbox__footer">
-                <input type="text" placeholder="Write a message...">
-                <button class="chatbox__send--footer send__button">Send</button>
-            </div>
-        </div>
-        <div class="chatbox__button">
-            <button><img src="{{ url_for('static', filename='images/chatbox-icon.svg') }}" /></button>
         </div>
     </div>
-</div>
-
     <script>
         $SCRIPT_ROOT = {{ request.script_root|tojson }};
     </script>
     <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
-
 </body>
 </html>
