--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="chatbox__footer">
                     <input type="text" placeholder="Введите вопрос...">
-                    <button class="chatbox__send--footer send__button"><img width="28" height="28" src="https://img.icons8.com/external-kmg-design-glyph-kmg-design/32/666666/external-send-user-interface-kmg-design-glyph-kmg-design.png" alt="Send"/></button>
+                    <button class="chatbox__send--footer send__button"><img src="static/images/icon.png" alt="Send"/></button>
                 </div>
             </div>
             <div class="chatbox__button">
